Correcting folders organization
Adding /src and /tests folders to organize the projects better

--- a/tests/CleanValidation.DependencyInjection.Tests/CleanValidation.DependencyInjection.Tests.csproj
+++ b/tests/CleanValidation.DependencyInjection.Tests/CleanValidation.DependencyInjection.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CleanValidation.DependencyInjection\CleanValidation.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\src\CleanValidation.DependencyInjection\CleanValidation.DependencyInjection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
