--- a/tests/CleanValidation.Extensions.Http.Tests/CleanValidation.Extensions.Http.Tests.csproj
+++ b/tests/CleanValidation.Extensions.Http.Tests/CleanValidation.Extensions.Http.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CleanValidation.Extensions.Http\CleanValidation.Extensions.Http.csproj" />
+    <ProjectReference Include="..\..\src\CleanValidation.Extensions.Http\CleanValidation.Extensions.Http.csproj" />
   </ItemGroup>
 
   <ItemGroup>
