--- a/tests/CleanValidation.Core.Tests/CleanValidation.Core.Tests.csproj
+++ b/tests/CleanValidation.Core.Tests/CleanValidation.Core.Tests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CleanValidation.Core\CleanValidation.Core.csproj" />
+    <ProjectReference Include="..\..\src\CleanValidation.Core\CleanValidation.Core.csproj" />
   </ItemGroup>
 
 </Project>
