--- a/src/CleanValidation.Extensions.Http/CleanValidation.Extensions.Http.csproj
+++ b/src/CleanValidation.Extensions.Http/CleanValidation.Extensions.Http.csproj
@@ -5,14 +5,36 @@
 	<TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Title>CleanValidation.Extensions.Http</Title>
+    <Authors>Eduardo_Rezende</Authors>
+    <Description>Provides seamless mapping from IResult / IResult&lt;T&gt; (from CleanValidation.Core) into ASP.NET Core IActionResult types, enabling fluent and expressive return statements in your controller or endpoint layer.</Description>
+    <PackageProjectUrl>https://github.com/IseduardoRezende/CleanValidation</PackageProjectUrl>
+    <PackageIcon>LogoCV.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/IseduardoRezende/CleanValidation</RepositoryUrl>
+    <PackageTags>result;;guard;clause;validator;validation;error;fluent;builder;generic;aspnet;http;web;</PackageTags>
+    <PackageOutputPath>bin\</PackageOutputPath>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\..\LogoCV.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CleanValidation.Core" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CleanValidation.Core\CleanValidation.Core.csproj" />
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
